--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
           <div id="high-score-container" class="score-container"></div>
           <button id="try-again">Try Again?</button>
         </div>
+        <div class="times-up" id="times-up">
+          <h1>Times Up!</h1>
+          <button id="go-to-high-scores">High Scores</button>
+          <button id="go-to-start">Try Again?</button>
+        </div>
       </div>
     </main>
 
